--- a/libs/src/main/res/layout/view_screen_logger_overlay.xml
+++ b/libs/src/main/res/layout/view_screen_logger_overlay.xml
@@ -3,23 +3,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <co.bestdi.libs.views.ScreenLoggerTitleView
+    <co.bestdi.libs.views.LoggerTitleView
         android:id="@+id/titleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/screenLoggerMarginSide"
-        android:layout_marginRight="@dimen/screenLoggerMarginSide" />
+        android:layout_marginLeft="@dimen/loggerMarginSide"
+        android:layout_marginRight="@dimen/loggerMarginSide" />
 
     <TextView
         android:id="@+id/tvVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/screenLoggerMarginSide"
-        android:layout_marginTop="@dimen/screenLoggerMarginSide"
+        android:layout_marginBottom="@dimen/loggerMarginSide"
+        android:layout_marginTop="@dimen/loggerMarginSide"
         android:textColor="@android:color/white"
         android:textSize="20sp" />
 
-    <co.bestdi.libs.views.ScreenLoggerViewPagerContainer
+    <co.bestdi.libs.views.LoggerViewPagerContainer
         android:id="@+id/vpcScreenLogger"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -29,7 +29,7 @@
         android:id="@+id/btnClose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/screenLoggerCloseBtnBg"
-        android:text="@string/screen_logger_btn_close"
+        android:background="@color/loggerCloseBtnBg"
+        android:text="@string/logger_btn_close"
         android:textColor="@android:color/white" />
 </merge>
