--- a/libs/src/main/res/layout/view_screen_log_list_container.xml
+++ b/libs/src/main/res/layout/view_screen_log_list_container.xml
@@ -7,7 +7,7 @@
         android:id="@+id/rvLogs"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="@dimen/screenLoggerMarginSide"
+        android:layout_margin="@dimen/loggerMarginSide"
         android:layout_weight="1" />
 
 </merge>
