--- a/libs/src/main/res/values/colors.xml
+++ b/libs/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="screenLoggerBackground">#99000000</color>
-    <color name="screenLoggerCheckboxBackground">#22FFFFFF</color>
-    <color name="screenLoggerClearAllLogsBtnBg">#EB8D23</color>
-    <color name="screenLoggerCloseBtnBg">#FC3151</color>
+    <color name="loggerBackground">#99000000</color>
+    <color name="loggerCheckboxBackground">#22FFFFFF</color>
+    <color name="loggerClearAllLogsBtnBg">#EB8D23</color>
+    <color name="loggerCloseBtnBg">#FC3151</color>
     <color name="warnLogColor">#FF7A10</color>
     <color name="errorLogColor">#FF1023</color>
 </resources>
